--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,3 +19,44 @@ h1,h2 {
   font-size: 24px;
   margin-bottom: 16px;
 }
+
+
+.textarea-wrapper {
+  border: 1px solid grey;
+  border-radius: 2px;
+  width: 500px;
+  height: 220px;
+}
+
+.textarea {
+  margin: 0;
+  padding: 10px 0;
+  height: 200px;
+  border-radius: 0;
+  resize: none;
+  outline: none;
+  font-family: monospace;
+  font-size: 16px;
+  line-height: 1.2;
+}
+
+.textarea::placeholder {
+  color: grey;
+}
+
+.numbers-wrapper {
+  margin: 0;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  overflow-y: hidden;
+  text-align: right;
+  color: grey;
+  background-color: lightgrey;
+  width: 1.5rem;
+}
+
+.number {
+  color: inherit;
+}
+
